# VPath

./: .gitignore  pyproject.toml
avpath/: __init__.py  base.py  factory.py  paths.py  storage.py
avpath/middleware/: __init__.py  mount.py  multi.py  sub.py  wrap.py
avpath/storages/: __init__.py  local.py  memory.py
avpath/utils/: __init__.py  textio.py
tests/: test_async.py  test_sync.py
vpath/: __init__.py  abc.py  base.py  factory.py  paths.py  protocols.py  storage.py  utils.py
vpath/middleware/: __init__.py  mixins.py  mount.py  multi.py  sub.py  wrap.py
vpath/storages/: local.py  memory.py
