[project]
name = "vpath"
version = "0.1.0"
description = "Universal VFS with optional async support"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.4.0",
]

[project.optional-dependencies]
async = [
    "aiofiles>=25.1.0",
    "anyio>=4.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vpath", "avpath"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]