[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpath"
version = "0.1.0"
description = "Universal VFS with optional async support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "attrs>=25.4.0",
]

[project.optional-dependencies]
async = [
    "aiofiles>=24.1.0",
    "anyio>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vpath", "avpath"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]